# daydream-2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING.NOTICE  Doxyfile  README.md  deploy.bat  deploy.sh
cmake/: FindGLEW.cmake
docs/: .gitignore  Doxyfile
include/dd/: PrecompiledHeader.h
include/dd/Core/: CTemplate.h  CTransform.h  Camera.h  Color.h  Component.h  EComponentCreated.h  EGamepadAxis.h  EGamepadButton.h  EKeyDown.h  EKeyUp.h  ELockMouse.h  EMouseMove.h  EMousePress.h  EMouseRelease.h  Engine.h  Entity.h  EventBroker.h  Image.h  InputController.h  InputManager.h  Model.h  OBJ.h  PNG.h  RenderQueue.h  Renderer.h  ResourceManager.h  ShaderProgram.h  Skeleton.h  System.h  Texture.h  World.h
include/dd/Core/Util/: EnumClassHash.h  Factory.h  FileWatcher.h  GLError.h  Logging.h  Rectangle.h  UnorderedMapPair.h
include/dd/Input/: EBindGamepadAxis.h  EBindGamepadButton.h  EBindKey.h  EBindMouseButton.h  EInputCommand.h  InputSystem.h
include/dd/Particles/: CParticle.h  CParticleEmitter.h  ParticleSystem.h
include/dd/Physics/: CBoxShape.h  CHingeConstraint.h  CMeshShape.h  CVehicle.h  CWheel.h  EApplyPointImpulse.h  EDisableCollisions.h  EEnableCollisions.h  PhysicsSystem.h
include/dd/Rendering/: CBlendMap.h  CCamera.h  CDamageModel.h  CDirectionalLight.h  CModel.h  CPointLight.h  CSprite.h  CViewport.h
include/dd/Sound/: CListener.h  CSoundEmitter.h  EPlayBGM.h  Sound.h  SoundSystem.h
include/dd/Timer/: CFrameTimer.h  CTimer.h  TimerSystem.h
include/dd/Transform/: EMove.h  ERotate.h  TransformSystem.h
include/dd/Trigger/: CMove.h  CRotate.h  CTrigger.h  CTriggerExplosion.h  CTriggerMove.h  CTriggerRotate.h  EEnterTrigger.h  ELeaveTrigger.h  TriggerSystem.h
include/proprietary/Physics/: CBoxShape.h  CHingeConstraint.h  CMeshShape.h  CPhysics.h  CSphereShape.h  CVehicle.h  CWheel.h  CWheelPair.h  EApplyForce.h  EApplyPointImpulse.h  ECollision.h  EDisableCollisions.h  EEnableCollisions.h  ESetVelocity.h  PhysicsSystem.h  VehicleSetup.h  WheelPairSystem.h
include/proprietary/Sound/: CListener.h  CSoundEmitter.h  EPlayBGM.h  EPlaySFX.h  EStopSound.h  Sound.h  SoundSystem.h
include/returngeance/Components/: BarrelSteering.h  Flag.h  Follow.h  FreeSteering.h  Garage.h  Health.h  HelicopterSteering.h  Input.h  JeepSteering.h  Player.h  SpawnPoint.h  TankShell.h  TankSteering.h  Team.h  Tower.h  TowerDebris.h  TowerSteering.h  Turret.h  TurretShot.h  Wall.h
include/returngeance/Events/: CastRay.h  ComponentCreated.h  CreateExplosion.h  Damage.h  Dead.h  FlagCaptured.h  FlagDropped.h  FlagPickup.h  FlagReturned.h  GameOver.h  GameStart.h  JeepSteer.h  RayIntersection.h  SetViewportCamera.h  SpawnVehicle.h  TankSteer.h
include/returngeance/GUI/: Frame.h  GameFrame.h  GameOverFrame.h  HealthOverlay.h  MainMenuFrame.h  PlayerHUD.h  TextureFrame.h  VehicleSelection.h  Viewport.h  WorldFrame.h
include/returngeance/Systems/: DamageSystem.h  DebugSystem.h  FlagSystem.h  FollowSystem.h  FreeSteeringSystem.h  GameStateSystem.h  GarageSystem.h  HelicopterSteeringSystem.h  JeepSteeringSystem.h  RaySystem.h  TankSteeringSystem.h  TowerSystem.h  WallSystem.h
libs/SOIL/lib/Debug/: SOIL.lib
libs/SOIL/lib/Release/: SOIL.lib
libs/assimp-3.1.1/lib/Debug/: assimpd.exp  assimpd.lib
libs/assimp-3.1.1/lib/MinSizeRel/: assimp.exp  assimp.lib
libs/assimp-3.1.1/lib/RelWithDebInfo/: assimp.exp  assimp.lib
libs/assimp-3.1.1/lib/Release/: assimp.exp  assimp.lib
libs/bullet3/lib/Debug/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletDynamics_Debug.lib  BulletFileLoader_Debug.lib  BulletSoftBody_Debug.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter_Debug.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils_Debug.lib  LinearMath_Debug.lib  OpenGLSupport_Debug.lib  OpenGLWindow_Debug.lib  gtest_Debug.lib
libs/bullet3/lib/MinSizeRel/: Bullet2FileLoader_MinsizeRel.lib  Bullet3Collision_MinsizeRel.lib  (+17 more)
src/dd/: CMakeLists.txt  PrecompiledHeader.cpp  main.cpp
src/dd/Core/: Camera.cpp  CubemapTexture.cpp  EventBroker.cpp  InputManager.cpp  Model.cpp  OBJ.cpp  PNG.cpp  Renderer.cpp  ResourceManager.cpp  ShaderProgram.cpp  Skeleton.cpp  Skybox.cpp  Texture.cpp  World.cpp
src/dd/Core/Shaders/: Deferred.1.frag.glsl  Deferred.2.frag.glsl  Deferred.2.vert.glsl  Deferred.3.frag.glsl  Deferred.3.vert.glsl  Forward.frag.glsl  Forward.vert.glsl  Screen.frag.glsl  Screen.vert.glsl
src/dd/Core/Shaders/Deferred/1/: Fragment.glsl  Vertex.glsl
src/dd/Core/Shaders/Deferred/2/: Vertex.glsl
src/dd/Core/Shaders/Deferred/3/: Fragment.glsl
src/dd/Core/Util/: FileWatcher.cpp
src/dd/Input/: InputSystem.cpp
src/dd/Particles/: ParticleSystem.cpp
src/dd/Physics/: PhysicsSystem.cpp  VehicleSetup.cpp  WheelPairSystem.cpp
src/dd/Sound/: Sound.cpp  SoundSystem.cpp
src/dd/Timer/: TimerSystem.cpp
src/dd/Transform/: TransformSystem.cpp
src/dd/Trigger/: TriggerSystem.cpp
src/game/: CMakeLists.txt  main.cpp
src/returngeance/Shaders/: AABB.frag.glsl  BlendMap.frag.glsl  BlendMap.vert.glsl  FinalForwardPass.frag.glsl  FinalForwardPass.vert.glsl  FinalPass.frag.glsl  ForwardRendering.frag.glsl  ForwardRendering.vert.glsl  Fragment.glsl  Fragment2-Debug.glsl  Fragment2.glsl  Normals.frag.glsl  Normals.geo.glsl  ShadowMap.frag.glsl  ShadowMap.vert.glsl  Skybox.frag.glsl  Skybox.vert.glsl  SunPass.frag.glsl  SunPass.vert.glsl  Vertex2.glsl  VisualizeDepth.frag.glsl  VisualizeDepth.vert.glsl
src/returngeance/Systems/: DamageSystem.cpp  DebugSystem.cpp  FlagSystem.cpp  FollowSystem.cpp  FreeSteeringSystem.cpp  GameStateSystem.cpp  GarageSystem.cpp  HelicopterSteeringSystem.cpp  JeepSteeringSystem.cpp  RaySystem.cpp  TankSteeringSystem.cpp  TowerSystem.cpp  WallSystem.cpp
src/tests/: CMakeLists.txt  ComponentCopyTest.cpp  FileWatcherTest.cpp  main.cpp
tools/: prepend-licence.sh
vs13/: .gitignore  daydream.sln  daydream.vcxproj  daydream.vcxproj.filters
vs13/game/: game.vcxproj  game.vcxproj.filters
vs13/tests/: tests.vcxproj  tests.vcxproj.filters
(+62 files in other folders)
